# DTEAM-django-practical-test

./: .dockerignore  .env.example  .gitignore  .gitlint  .mypy.ini  .pre-commit-config.yaml  .python-version  .ruff.toml  .typos.toml  Dockerfile  README.md  celery-entrypoint.sh  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
CVProject/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
apps/audit/: middleware.py  models.py  urls.py  views.py
apps/audit/migrations/: 0001_initial.py
apps/main/: models.py  send_pdf_email_task.py  serializers.py  urls.py  views.py
apps/main/migrations/: 0001_initial.py
apps/settingsinfo/: apps.py  context_processors.py  urls.py  views.py
apps/templates/: base.html
apps/templates/audit/: recent_logs.html
apps/templates/main/: cv_detail.html  cv_list.html  cv_pdf.html
apps/templates/settingsinfo/: settings.html
apps/tests/: test_api.py  test_logging.py  test_views.py
fixtures/: cv_data.json
utils/: html_to_pdf.py  languages.py  text_from_cv.py  translate.py
